Fix: resolve issue where `.publications` would overflow on screens smaller than 350px

--- a/src/pages/Publications.scss
+++ b/src/pages/Publications.scss
@@ -2,10 +2,12 @@
 
 .publications {
 	&__publications {
-		display: grid;
+		display: flex;
+		flex-direction: column;
 		gap: u.rem(16);
 
 		@include u.breakpoint(medium) {
+			display: grid;
 			grid-template-columns: repeat(auto-fit, minmax(u.rem(400), 1fr));
 		}
 	}
